# glrd

./: .gitignore  Containerfile  Makefile  README.md  VERSION  action.yaml  glrd  glrd-create  pyproject.toml  releases-input.yaml  requirements.txt  setup.py
.github/actions/setup/: action.yml
.github/workflows/: dev.yml  image-dev.yml  image-release.yml  image.yml  test.yml
assets/: overview.excalidraw
docs/how-to/: README.md
docs/overview/: README.md
glrd/: manage.py  query.py  schema_v1.py  schema_v2.py  update.py  util.py
tests/: __init__.py  conftest.py  test_integration.py  test_schema_validation.py  test_update.py
