[project]
name = "glrd"
dynamic = ["version"]

[tool.poetry]
name = "glrd"
version = "0.0.0"
description = "Garden Linux Release Database"
authors = ["Garden Linux Team"]
readme = "README.md"
packages = [{include = "glrd"}]

[tool.poetry.dependencies]
python = "^3.10"
poetry-dynamic-versioning = "*"
boto3 = "*"
deepdiff = "*"
jsonschema = "*"
PyYAML = "*"
pytz = "*"
python-dateutil = "*"
requests = "*"
tabulate = "*"
python-gardenlinux-lib = { git = "https://github.com/gardenlinux/python-gardenlinux-lib.git", branch = "main" }

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
pattern = '''(?x)
    v(?P<base>\d+\.\d+\.\d+)
'''
strict = true
dirty = true
metadata = true
tagged-metadata = false

[tool.poetry.scripts]
glrd-update = "glrd.update:main"
glrd-manage = "glrd.manage:main"
glrd = "glrd.query:main"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
